<resources>
    <string name="app_name">ToDo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="type_your_email">Type your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_password">Create a password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="not_registered">Not registered?</string>
    <string name="type_your_task">Type your task...</string>
</resources>