<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/right_image"
        android:layout_width="60dp"
        android:layout_height="130dp"
        android:rotation="180"
        android:scaleType="fitXY"
        android:src="@drawable/ellipse_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/bottom_image"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginStart="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUp_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/email_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="-56dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/right_image">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_TextLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="15dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/createPassword_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/email_cardView"
        app:layout_constraintStart_toStartOf="@id/email_cardView"
        app:layout_constraintTop_toBottomOf="@id/email_cardView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createPassword_TextLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createPassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_a_password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="15dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/confirmPassword_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@id/createPassword_cardView"
        app:layout_constraintStart_toStartOf="@id/createPassword_cardView"
        app:layout_constraintTop_toBottomOf="@id/createPassword_cardView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword_TextLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="15dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/signUpDone_btn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/btn"
        app:layout_constraintEnd_toEndOf="@id/confirmPassword_cardView"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword_cardView">

    </ImageView>

    <TextView
        android:id="@+id/alrdyRegistered_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword_cardView"
        app:layout_constraintStart_toStartOf="@id/confirmPassword_cardView"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        >
    </TextView>

    <TextView
        android:id="@+id/signInInstead_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toEndOf="@id/alrdyRegistered_tw"
        app:layout_constraintTop_toTopOf="@id/alrdyRegistered_tw"
        android:textSize="16sp">

    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:indeterminateTint="@color/text_color"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/bottom_image"
        app:layout_constraintTop_toBottomOf="@+id/signInInstead_tw" />


</androidx.constraintlayout.widget.ConstraintLayout>